--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/jscodeshift": "^0.11.11",
+    "@types/node": "^20.14.2",
     "jscodeshift": "^0.15.2",
     "typescript": "^5.4.5"
   }
